Fix: avoid overflowing thumbs to break layout

--- a/client/components/theme/style.scss
+++ b/client/components/theme/style.scss
@@ -5,10 +5,15 @@ $theme-info-height: 54px;
 	margin: 0 10px 20px 10px;
 	width: 230px; // Fixed width gives desired wrapping...
 	flex-grow: 1; // ...grow allows expansion to fill space after wrap.
+	overflow: hidden;
 	transition: all 100ms ease-in-out;
 
 	&.is-active {
 		background: $blue-medium;
+
+		.theme__info {
+			background: $blue-medium;
+		}
 
 		.theme__info-title {
 			color: $white;
@@ -55,6 +60,7 @@ $theme-info-height: 54px;
 		right: 0;
 	height: $theme-info-height;
 	display: flex;
+	background: $white;
 }
 
 .theme__info-title {
